polishing things up and fixing hamburger menu for navbar on mobile view

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,6 +14,14 @@
   color: white;
   float: left;
 }
+.navbar
 {
-
+  position: relative;
+}
+.navbar-dark .navbar-nav .nav-link{
+  font-weight: bold;
+  color: black;
+}
+.navbar-brand{
+  font-weight: bold;
 }
